# carcara-nvc

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/scripts/: migrate.sh  start.sh
backend/src/: main.py
backend/src/api/endpoints/: alarms.py  cameras.py  detections.py  models.py  roi.py  streams.py  ws_streams.py
backend/src/api/models/: camera.py  detection.py  stream.py
backend/src/core/: config.py  logging.py
backend/src/db/: base_class.py  init_db.py  session.py
backend/src/db/migrations/: env.py
backend/src/models/: alarm.py  camera.py  detection.py  roi.py  stream.py
backend/src/schemas/: alarm.py  roi.py
backend/src/services/: detection.py  models.py
backend/tests/src/api/: test_streams_endpoint.py
backend/tests/src/api/endpoints/: test_streams_endpoint.py  test_ws_streams.py
backend/tests/src/services/: test_detection_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CameraScanner.tsx  Grid.tsx  Layout.tsx  RegionOfInterest.tsx
frontend/src/pages/: Alarms.tsx  Cameras.tsx  Settings.tsx  Streams.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
