[tool.poetry]
name = "carcara-nvc-backend"
version = "0.1.0"
description = "Backend for Carcara NVC - IP Camera Streaming and Object Detection"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11.12"
fastapi = "0.109.0"
uvicorn = "0.27.0"
sqlalchemy = "2.0.25"
psycopg2-binary = "2.9.9"
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
alembic = "1.13.1"
opencv-python = "4.9.0.80"
numpy = "1.26.3"
ultralytics = "8.1.0"
torch = {version = "2.2.0", source = "pytorch"}
torchvision = {version = "0.17.0", source = "pytorch"}

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
black = "24.1.1"
isort = "5.13.2"
flake8 = "7.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"