[tool.poetry]
name = "carcara-nvc-backend"
version = "0.1.0"
description = "Backend for Carcara NVC - IP Camera Streaming and Object Detection"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11.12"
fastapi = "0.115.12"
uvicorn = "0.34.2"
sqlalchemy = "2.0.40"
psycopg2-binary = "2.9.10"
pydantic = "2.11.4"
pydantic-settings = "2.9.1"
python-multipart = "0.0.20"
python-jose = {extras = ["cryptography"], version = "3.4.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
alembic = "1.15.2"
opencv-python = "4.11.0.86"
numpy = "2.2.5"
ultralytics = "8.3.121"
torch = {version = "2.7.0", source = "pytorch"}
torchvision = {version = "0.22.0", source = "pytorch"}
websockets= "15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.2.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"